--- a/cadastro/templates/listar_lojas.html
+++ b/cadastro/templates/listar_lojas.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Lojas</h1>
+    
+    <a href="{% url 'incluir_loja' %}">Incluir</a>
+    <table>
+        <thead>
+            <tr>
+                <td>Nome</td>
+                <td>Telefone</td>
+                <td>Ações</td>
+            </tr>
+        </thead>
+        <tbody>
+            {% for l in lojas %}
+            <tr>
+                <td>{{ l.nome }}</td>
+                <td>{{ l.telefone }}</td>
+                <td>Alterar Excluir</td>
+            </tr>    
+            {% endfor %}
+        </tbody>
+    </table>
 </body>
 </html>
