Classe Produto, listagem e cadastro de produtos

--- a/siteweb/templates/index.html
+++ b/siteweb/templates/index.html
@@ -11,5 +11,9 @@
     <a href="{% url 'listar_lojas' %}">
         Cadastro de Lojas
     </a>
+
+    <a href="{% url 'listar_produtos' %}">
+        Cadastro de Produtos
+    </a>
 </body>
 </html>
