Alteração e Exclusão produtos; e layout guia

--- a/cadastro/templates/incluir_produto.html
+++ b/cadastro/templates/incluir_produto.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'interna.html' %}
+
+{% block content %}
     <form method="post">
         {{ formulario }}
         {% csrf_token %}
         <input type="submit" value="Gravar" />
         <input type="reset" value="Limpar" />
     </form>
-</body>
-</html>
+{% endblock %}
