--- a/cadastro/templates/incluir_loja.html
+++ b/cadastro/templates/incluir_loja.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body> <!--Corpo da página -->
+{% extends 'interna.html' %}
+
+{% block content %}
     <!--
         Esta é 
         a 
@@ -41,5 +36,4 @@
            }
         });
         </script>
-</body>
-</html>
+{% endblock %}
