--- a/cadastro/templates/listar_lojas.html
+++ b/cadastro/templates/listar_lojas.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lojas</title>
-</head>
-<body>
+{% extends 'interna.html' %}
+
+{% block content %}
     <h1>Lojas</h1>
     
     <a href="{% url 'incluir_loja' %}">Incluir</a>
@@ -35,10 +30,4 @@
             {% endfor %}
         </tbody>
     </table>
-</body>
-<script>
-    function excluir(){
-        return confirm("Deseja excluir?");
-    }
-</script>
-</html>
+{% endblock %}
