--- a/cadastro/templates/listar_lojas.html
+++ b/cadastro/templates/listar_lojas.html
@@ -3,8 +3,10 @@
 {% block content %}
     <h1>Lojas</h1>
     
-    <a href="{% url 'incluir_loja' %}">Incluir</a>
-    <table>
+    <a href="{% url 'incluir_loja' %}"
+        class="btn btn-primary">Incluir
+    </a>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <td>Nome</td>
@@ -17,16 +19,19 @@
             <tr>
                 <td>{{ l.nome }}</td>
                 <td>{{ l.telefone }}</td>
-                <td><a href="{% url 'alterar_loja' l.id %}">
+                <td><a href="{% url 'alterar_loja' l.id %}"
+                      class="btn btn-secondary">
                         Alterar
                     </a> 
                     <!---->
                     <a href="{% url 'excluir_loja' l.id %}"
-                       onclick="return excluir()">                    
+                       onclick="return excluir()"
+                       class="btn btn-danger">                    
                         Excluir
                     </a>
                 </td>
             </tr>    
+
             {% endfor %}
         </tbody>
     </table>
