--- a/layout/menu_interno.html
+++ b/layout/menu_interno.html
@@ -1,15 +1,27 @@
-<a href="{% url 'listar_lojas' %}">
-    Cadastro de Lojas
-</a>
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'area_interna' %}">
+            Interno
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+            data-bs-target="#menu" aria-controls="menu" aria-expanded="false">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="menu">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="{% url 'listar_lojas' %}" class="nav-link">Cadastro de Lojas</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'listar_produtos' %}" class="nav-link">Cadastro de Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'index' %}" class="nav-link">Voltar para o site</a> 
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<a href="{% url 'listar_produtos' %}">
-    Cadastro de Produtos
-</a>
 
-<a href="{% url 'index' %}">
-    Voltar para o site
-</a>
 
-<a href="{% url 'area_interna' %}">
-    Voltar
-</a>
