--- a/layout/principal.html
+++ b/layout/principal.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping InfoCena</title>
+
+    {% load django_bootstrap5 %}
+
+    {% bootstrap_css %}
 </head>
 <body>
-    {% include 'menu.html' %}
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+        {% include 'menu.html' %}
+        {% block content %}
+        {% endblock %}
+    </div>
 
-</body>
+</body> 
+    {% bootstrap_javascript %}
 </html>
