--- a/cadastro/templates/incluir_produto.html
+++ b/cadastro/templates/incluir_produto.html
@@ -2,9 +2,12 @@
 
 {% block content %}
     <form method="post">
-        {{ formulario }}
+        {% load django_bootstrap5 %}
+        {% bootstrap_form formulario %}
         {% csrf_token %}
-        <input type="submit" value="Gravar" />
-        <input type="reset" value="Limpar" />
+        <input type="submit" value="Gravar" 
+            class="btn btn-primary" />
+        <input type="reset" value="Limpar"
+            class="btn btn-secondary" />
     </form>
 {% endblock %}
