--- a/layout/principal.html
+++ b/layout/principal.html
@@ -6,8 +6,10 @@
     <title>Shopping InfoCena</title>
 
     {% load django_bootstrap5 %}
-
+    {% load static %}
     {% bootstrap_css %}
+    <link rel="stylesheet" 
+        href="{% static '/css/estilo.css' %}" />
 </head>
 <body>
     <div class="container">
