--- a/siteweb/templates/quem_somos.html
+++ b/siteweb/templates/quem_somos.html
@@ -2,6 +2,11 @@
 
 {% block content %}
     <h1>Quem somos</h1>
+    <p>Somos um shopping de artigos de informática.</p>
+
+    <p class="diferente">Estamos no Rio de Janeiro</p>
+    <p class="diferente">Sempre em sintonia com a 
+        alta tecnologia.</p>
 
 {% endblock %}
 
