--- a/layout/menu.html
+++ b/layout/menu.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
+        {% load static %}
         <a class="navbar-brand" href="{% url 'index' %}">
-            <img src="/imagens/computador.jpg" />
+            <img src="{% static '/imagens/computador.png' %}" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
             data-bs-target="#menu" aria-controls="menu" aria-expanded="false">
@@ -19,7 +20,9 @@
                     <a href="#" class="nav-link">Lojas</a> 
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Produtos</a> 
+                    <a href="{% url 'produtos' %}" class="nav-link">
+                        Produtos
+                    </a> 
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Cadastre-se</a>
